--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="apresentacao__botoes__botao" href="https://https://twitter.com/HugoSilvaFaria1"><img src="./assets/twitter.png">Twitter</a>
             </div>
         </section>
-        <img src="./assets/imagem.png" alt="Foto da Joana Santos Programando">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos Programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Hugo.</p>
